# Kabineo

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py  002_add_must_change_password_and_system_settings.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  comment.py  correspondent.py  document.py  document_share.py  document_type.py  folder.py  folder_permission.py  group.py  matching_rule.py  notification.py  share_link.py  system_setting.py  tag.py  telegram_link.py  user.py  version.py  webhook.py
backend/app/routers/: admin.py  api_keys.py  auth.py  correspondents.py  document_shares.py  document_types.py  documents.py  export.py  folder_permissions.py  folders.py  groups.py  matching_rules.py  notifications.py  search.py  settings.py  shares.py  sso.py  tags.py  webhooks.py
backend/app/schemas/: api_key.py  audit.py  correspondent.py  document.py  document_type.py  folder.py  group.py  matching_rule.py  search.py  share.py  tag.py  user.py  webhook.py
backend/app/services/: audit_service.py  auth_service.py  document_service.py  email_service.py  folder_service.py  search_service.py  share_service.py
backend/app/storage/: __init__.py  base.py  local.py  s3.py
backend/app/telegram/: bot.py  notifications.py
backend/app/workers/: barcode_tasks.py  celery_app.py  classify_tasks.py  consume_tasks.py  email_tasks.py  (+5 more)
backend/tests/: conftest.py  test_health.py
(+64 files in other folders)
